<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tag Writter</string>
    <string name="WriteUrl">Write Url</string>
    <string name="WriteText">Write Plain Text</string>
    <string name="action_settings">Settings</string>
    <string name="Quit">Quit</string>
    <string name="wURL">Write URL in the field</string>
    <string name="wText">Write Text in the field</string>
    <string name="title_activity_WriteUrl">Write of URL</string>
    <string name="title_activity_WriteText">Write of Text </string>
    <string name="title_activity_MenuWrite">Choose one </string>
    <string name="title_activity_MenuRead">Touch tag </string>
    <string name="title_activity_ReadUrl">Read URL </string>
    <string name="title_activity_ReadText">Read Plain Text </string>
    <string name="title_activity_identifier">Create Type of Interaction</string>
    <string name="title_activity_show_DB">Show DB</string>
    <string name="title_activity_show_settings">Show Settings</string>
    <string name="Save">Save&amp;Write</string>
    <string name="save">Save</string>
    <string name="Choose">Choose one option</string>
    <string name="Read">Read Tags</string>
    <string name="Write">Write Tags</string>
    <string name="MainMenu">Back</string>
    <string name="Touch">Touch an NFC tag for reading</string>
    <string name="Touch2">Reading will begin when you tap an NFC tag</string>
     <string name="Touch3">Touch an NFC tag for reading and searching in database</string>
    <string name="open">Open link</string>
    <string name="ReadText">Text Plain:</string>
    <string name="id_text">Create identifier:</string>
    <string name="refresh">refresh</string>
    <string name="reciver">AutoSyn</string>
    <string name="create_identifier">Create Relation</string>
    <string name="showDB">show DataBase</string>
    <string name="showDATABASE">Show table Log:</string>
    <string name="Settings">Settings</string>
    <string name="Relation">Relation</string>
    <string name="P_object">P.Object</string>
    <string name="Object">Object</string>
    <string name="Timestamp">Timestamp</string>
    <string name="Sync">Sync</string>
    <string name="interaction">Create Relation-Interaction</string>
    <string name="Cbox">Enable removal</string>
    <string name="b_id">"Add"</string>
    <string name="Relationship">"Relation"</string>
    <string name="Interaction">"Type of Interaction"</string>
    
    

</resources>