<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.example.nfc_writing.MainActivity" >

            <Button
                android:id="@+id/WriteTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/ReadTag"
                android:layout_below="@+id/ReadTag"
                android:layout_marginTop="16dp"
                android:text="@string/Write"
                android:width="250dp" />

            <Button
                android:id="@+id/ReadTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/FielText"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:text="@string/Read"
                android:width="250dp" />

            <TextView
                android:id="@+id/FielText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignRight="@+id/Quit"
                android:layout_marginTop="22dp"
                android:ems="10"
                android:paddingLeft="20dp"
                android:text="@string/Choose"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <Button
                android:id="@+id/CreateIdentifier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/WriteTag"
                android:layout_alignRight="@+id/WriteTag"
                android:layout_below="@+id/WriteTag"
                android:layout_marginTop="16dp"
                android:text="@string/create_identifier"
                android:width="250dp" />

            <Button
                android:id="@+id/Quit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/CreateIdentifier"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"
                android:minWidth="250dp"
                android:text="@string/Quit" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>